--- a/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
@@ -1,27 +1,53 @@
+<h1>Añadir un proyecto</h1>
 <div fxFlexFill fxLayoutAlign="center center" fxLayout="row">
-  <form fxLayout="column" fxFlexFill [formGroup]="form">
-      <mat-form-field class="example-full-width">
-          <input matInput placeholder="Título..." [formControl]="form.controls['title']">
-      </mat-form-field>
+    <form fxLayout="column" fxFlexFill [formGroup]="form">
+        <mat-form-field class="example-full-width">
+            <input matInput placeholder="Título..." [formControl]="form.controls['title']">
+        </mat-form-field>
+        <div *ngIf="form.controls['title'].invalid && (form.controls['title'].dirty || form.controls['title'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="form.controls['title'].errors.required">
+                El título es necesario
+            </div>
+        </div>
 
-      <mat-form-field>
-          <input matInput placeholder="Autores" [formControl]="form.controls['autores']">
-      </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Autores..." [formControl]="form.controls['autores']">
+        </mat-form-field>
+        <div *ngIf="form.controls['autores'].invalid && (form.controls['autores'].dirty || form.controls['autores'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="form.controls['autores'].errors.required">
+                Los autores son necesario
+            </div>
+        </div>
 
-      <mat-form-field>
-          <input matInput placeholder="Curso" [formControl]="form.controls['curso']">
-      </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Curso..." [formControl]="form.controls['curso']">
+        </mat-form-field>
+        <div *ngIf="form.controls['curso'].invalid && (form.controls['curso'].dirty || form.controls['curso'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="form.controls['curso'].errors.required">
+                El curso es necesario
+            </div>
+        </div>
 
-      <mat-form-field>
-          <input matInput placeholder="Imagenes" [formControl]="form.controls['img']">
-      </mat-form-field>
 
-      <mat-form-field>
-          <textarea matInput placeholder="Descripción" [formControl]="form.controls['descripcion']"></textarea>
-      </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Imagenes..." [formControl]="form.controls['img']">
+        </mat-form-field>
 
-      <div fxLayoutAlign="end end">
-          <button fxFlex="20%" (click)="addProject()">Añadir</button>
-      </div>
-  </form>
+        <mat-form-field>
+            <textarea matInput placeholder="Descripción..." [formControl]="form.controls['descripcion']"></textarea>
+        </mat-form-field>
+        <div *ngIf="form.controls['descripcion'].invalid && (form.controls['descripcion'].dirty || form.controls['descripcion'].touched)"
+            class="alert alert-danger">
+            <div *ngIf="form.controls['descripcion'].errors.required">
+                La descripción es necesaria
+            </div>
+        </div>
+
+        <div fxLayoutAlign="end end">
+            <button type="button" class="btn btn-rounded btn-primary" fxFlex="20%" [disabled]="!form.valid" (click)="addProject()">Añadir</button>
+        </div>
+    </form>
 </div>
