--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.css
@@ -1,15 +1,4 @@
-#logo {
-    width: 45%;
-}
-
-#logo img {
-    width: 100%;
-}
-
-#form {
-    width: 50%;
-}
-
-#form mat-form-field {
-    width: 90%;
+.container {
+    height: 100vh;
+    width: 100vw;
 }
