--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.html
@@ -1,26 +1,29 @@
 <div id="login" class="container">
     <div fxFlexFill>
-        <div id="logo">
-            <img src="../../../assets/images/logaso.png" srcset="">
+        <div fxLayout="row" fxFlexFill fxLayoutAlign="center center">
+            <div id="logo" fxFlex="50%">
+                <img src="../../../assets/images/logaso.png" srcset="">
+            </div>
+
+            <div id="form" fxFlex="45%">
+                <mat-card>
+                    <mat-card-content fxLayout.gt-xs="row" fxLayout="column">
+                        <form fxLayout="column">
+                            <mat-form-field>
+                                <input matInput placeholder="Email" required type="email">
+                            </mat-form-field>
+                            <mat-form-field>
+                                <input matInput placeholder="Password" type="password">
+                            </mat-form-field>
+                        </form>
+                    </mat-card-content>
+                    <mat-card-actions>
+                        <button mat-raised-button color="primary">Iniciar Sesión</button>
+                    </mat-card-actions>
+                </mat-card>
+            </div>
         </div>
 
-        <div id="form">
-            <mat-card>
-                <mat-card-content fxLayout.gt-xs="row" fxLayout="column">
-                    <form fxLayout="column">
-                        <mat-form-field>
-                            <input matInput placeholder="Email" required type="email">
-                        </mat-form-field>
-                        <mat-form-field>
-                            <input matInput placeholder="Password" type="password">
-                        </mat-form-field>
-                    </form>
-                </mat-card-content>
-                <mat-card-actions>
-                    <button mat-raised-button color="primary">Iniciar Sesión</button>
-                </mat-card-actions>
-            </mat-card>
-        </div>
     </div>
 
 </div>
