--- a/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.html
@@ -20,16 +20,12 @@
                     <!-- Logo icon --><b>
                         <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                         <!-- Dark Logo icon -->
-                        <img src="assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                        <img src="assets/images/logosalesianos.png" alt="homepage" class="dark-logo" />
                         <!-- Light Logo icon -->
-                        <img src="assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+                        <img src="assets/images/logosalesianos.png" alt="homepage" class="light-logo" />
                     </b>
                     <!--End Logo icon -->
-                    <!-- Logo text --><span>
-                     <!-- dark Logo text -->
-                     <img src="assets/images/logo-text.png" alt="homepage" class="dark-logo" />
-                     <!-- Light Logo text -->    
-                     <img src="assets/images/logo-light-text.png" class="light-logo" alt="homepage" /></span> </a>
+                    <!-- Logo text --></a>
             </div>
             <!-- ============================================================== -->
             <!-- End Logo -->
@@ -81,7 +77,7 @@
     <!-- footer -->
     <!-- ============================================================== -->
     <footer class="footer">
-        © 2018 Admin Pro Angular by wrappixel.com
+        © 2019 Salesianos Triana
     </footer>
     <!-- ============================================================== -->
     <!-- End footer -->
