--- a/adminpro-angular7-lite/Angular/src/app/shared/breadcrumb/breadcrumb.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/shared/breadcrumb/breadcrumb.component.html
@@ -1,7 +1,7 @@
 <!-- ============================================================== -->
 <!-- Bread crumb and right sidebar toggle -->
 <!-- ============================================================== -->
-<div class="row page-titles">
+<!--<div class="row page-titles">
     <div class="col-md-5 align-self-center">
         <h4 class="text-themecolor m-b-0">{{pageInfo?.title}}</h4>
     </div>
@@ -15,7 +15,7 @@
             </ng-template>
         </ol>
     </div>
-</div>
+</div>-->
 <!-- ============================================================== -->
 <!-- End Bread crumb and right sidebar toggle -->
 <!-- ============================================================== -->
