haciendo dialogo. moraleja: A más años, más desengaños.

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.css
@@ -29,3 +29,10 @@
     transform: translateY(12%);
     color: #fff;
 }
+
+.botonAniadir{
+    position: fixed;
+    margin-left: 70%;
+    /* margin-bottom: 30%; */
+    margin-top: 14%;
+}
