--- a/adminpro-angular7-lite/Angular/src/app/session/login/login.component.css
+++ b/adminpro-angular7-lite/Angular/src/app/session/login/login.component.css
@@ -1,3 +1,17 @@
 .container {
     transform: translateY(0%)
 }
+
+.login {
+    margin-left: 3.8%;
+    width: 95%;
+}
+#login_boton {
+    margin-bottom: 4.5%;
+    margin-left: 43%;
+}
+
+.signup {
+    margin-left: 3.8%;
+    width: 95%;
+}
