--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -24,5 +24,5 @@
     </div>
 </div>
 <div class="botonAniadir">
-    <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-link"></i> </button>
+    <button (click)="openDialogAddProject()" type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-link"></i> </button>
 </div>
