Cambios en el core moraleja: No se ni lo que es un sidenav hulio

--- a/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/layouts/full/full.component.html
@@ -38,20 +38,20 @@
     <!-- ============================================================== -->
     <!-- Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
-    <aside class="left-sidebar">
+    <!-- <aside class="left-sidebar"> -->
         <!-- Sidebar scroll-->
-        <div class="scroll-sidebar" [perfectScrollbar]="config">
+        <!-- <div class="scroll-sidebar" [perfectScrollbar]="config">
             <app-sidebar></app-sidebar>
-        </div>
+        </div> -->
         <!-- End Sidebar scroll-->
-    </aside>
+    <!-- </aside> -->
     <!-- ============================================================== -->
     <!-- End Left Sidebar - style you can find in sidebar.scss  -->
     <!-- ============================================================== -->
     <!-- ============================================================== -->
     <!-- Page wrapper  -->
     <!-- ============================================================== -->
-    <div class="page-wrapper">
+    <!-- <div class="page-wrapper"> -->
         <!-- ============================================================== -->
         <!-- Container fluid  -->
         <!-- ============================================================== -->
@@ -69,16 +69,17 @@
         <!-- ============================================================== -->
         <!-- End Container fluid  -->
         <!-- ============================================================== -->
-    </div>
+    <!-- </div> -->
     <!-- ============================================================== -->
     <!-- End Page wrapper  -->
     <!-- ============================================================== -->
     <!-- ============================================================== -->
     <!-- footer -->
     <!-- ============================================================== -->
-    <footer class="footer">
+    
+    <!-- <footer class="footer">
         © 2019 Salesianos Triana
-    </footer>
+    </footer> -->
     <!-- ============================================================== -->
     <!-- End footer -->
     <!-- ============================================================== -->
