--- a/adminpro-angular7-lite/Angular/src/app/component/carousel/carousel.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row justify-content-md-center justify-content-xlg-center">
 	<div class="col-md-6 col-xlg-5">
 		<div class="card">
 			<div class="card-body">
@@ -30,7 +30,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-md-6 col-xlg-5">
+	<!-- <div class="col-md-6 col-xlg-5">
 		<div class="card">
 			<div class="card-body">
 				<h3 class="card-title">Navigation arrows and indicators</h3>
@@ -65,5 +65,5 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 </div>
