proyecto detallado conectado con lista de proyectos, Moraleja: Dios los cria y ellos se juntan

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -8,7 +8,7 @@
                     <img class="card-img-top img-responsive" src={{proyecto.imagen}} alt="Card image cap">
                     <div class="card-body">
                         <h4 class="card-title">{{proyecto.nombre}} - {{proyecto.curso}}</h4>
-                        <a href="#" class="btn btn-primary" style="width:40%;">Ver</a>
+                        <a [routerLink]="['/proyectoDetallado', proyect.id]" class="btn btn-primary" style="width:40%;">Ver</a>
                     </div>
                 </div>
             </div>
