moraleja: Más malo que los delanteros del betis...

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -23,6 +23,4 @@
         </div>
     </div>
 </div>
-<div class="botonAniadir">
-    <button (click)="openDialogAddProject()" type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-link"></i> </button>
-</div>
+    <button (click)="openDialogAddProject()" type="button" class="btn btn-success btn-circle btn-lg mat-fab-bottom-right" style="z-index: 9;"><i class="fa fa-link"></i> </button>
