--- a/adminpro-angular7-lite/Angular/src/assets/scss/colors/default-dark.scss
+++ b/adminpro-angular7-lite/Angular/src/assets/scss/colors/default-dark.scss
@@ -7,7 +7,7 @@ File: scss
 
 $themecolor: #398bf7;
 $themecolor-dark: #028ee1;
-$topbar: #fff;
+$topbar: #1c2128;;
 $sidebar:#242a33;
 $sidebar-text: #687384;
 $sidebar-icons: #424a56;
