Versión 0.1 activa, moraleja: Trabaja y sé tú mismo, pase lo que pase.

--- a/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/lista-proyectos/lista-proyectos.component.html
@@ -23,4 +23,7 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-11"></div>
     <button (click)="openDialogAddProject()" type="button" class="btn btn-success btn-circle btn-lg mat-fab-bottom-right" style="z-index: 9;"><i class="fa fa-link"></i> </button>
+</div>
