--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -2,7 +2,7 @@
 	<div class="col-md-6 col-xlg-5">
 		<div class="card">
 			<div class="card-body">
-				<h3 class="card-title">Título del proyecto</h3>
+				<h3 class="card-title">{{proyect.nombre}}</h3>
 				<h6 class="card-subtitle">Imagenes</h6>
 				<ngb-carousel>
 					<ng-template ngbSlide>
@@ -37,11 +37,8 @@
             <h4 class="m-b-0 text-white">Descripción del proyecto</h4>
         </div>
         <div class="card-body">
-            <h3 class="card-title">Special title treatment</h3>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis a lorem nec ullamcorper. Vivamus 
-              id mi purus. Sed tristique leo sit amet risus viverra cursus. Sed nibh odio, finibus a quam non, vestibulum hendrerit ligula. 
-              Aenean vel leo ligula. Morbi vestibulum leo odio. Integer pretium sollicitudin luctus. Mauris mi tellus, facilisis a tempus vel, 
-              tincidunt in tellus. Ut in sem vitae nisi tristique interdum. Nunc aliquam purus et nunc convallis, sit amet consectetur magna cursus.
+            <!-- <h3 class="card-title">Special title treatment</h3> -->
+            <p class="card-text">{{proyect.descripcion}}
             </p>
 
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis a lorem nec ullamcorper. Vivamus 
