proyecto detallado muestra los demas atributos menos imagenes y comentarios, Moraleja: no es oro todo lo que reluce

--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -41,21 +41,7 @@
             <p class="card-text">{{proyect.descripcion}}
             </p>
 
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis a lorem nec ullamcorper. Vivamus 
-                id mi purus. Sed tristique leo sit amet risus viverra cursus. Sed nibh odio, finibus a quam non, vestibulum hendrerit ligula. 
-                Aenean vel leo ligula. Morbi vestibulum leo odio. Integer pretium sollicitudin luctus. Mauris mi tellus, facilisis a tempus vel, 
-                tincidunt in tellus. Ut in sem vitae nisi tristique interdum. Nunc aliquam purus et nunc convallis, sit amet consectetur magna cursus.
-            </p>
-
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis a lorem nec ullamcorper. Vivamus 
-                id mi purus. Sed tristique leo sit amet risus viverra cursus. Sed nibh odio, finibus a quam non, vestibulum hendrerit ligula. 
-                Aenean vel leo ligula. Morbi vestibulum leo odio. Integer pretium sollicitudin luctus. Mauris mi tellus, facilisis a tempus vel, 
-                tincidunt in tellus. Ut in sem vitae nisi tristique interdum. Nunc aliquam purus et nunc convallis, sit amet consectetur magna cursus.
-            </p>
-            <h6 class="card-subtitle">Componente 1</h6>
-            <h6 class="card-subtitle">Componente 2</h6>
-            <h6 class="card-subtitle">Componente 3</h6>
-            <h6 class="card-subtitle">Componente 4</h6>
+            <h6 class="card-subtitle">{{proyect.autores}}</h6>
         </div>
     </div>
 </div>
