--- a/adminpro-angular7-lite/Angular/src/styles.css
+++ b/adminpro-angular7-lite/Angular/src/styles.css
@@ -2,6 +2,7 @@
 
 @import '~perfect-scrollbar/css/perfect-scrollbar.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
 .ps .ps__scrollbar-y-rail {
     left: 3px;
     right: auto;
