--- a/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
@@ -1,21 +1,21 @@
 <div fxFlex="100%" fxFlexFill>
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" fxFlexFill>
+  <table mat-table [dataSource]="listaUsuariosRes" class="mat-elevation-z8" fxFlexFill>
   
     <!-- Position Column -->
     <ng-container matColumnDef="userId">
       <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let element">{{element.userId}}</td>
+      <td mat-cell *matCellDef="let usuario">{{usuario.id}}</td>
     </ng-container>
   
     <!-- Name Column -->
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let element">{{element.username}}</td>
+      <td mat-cell *matCellDef="let usuario">{{usuario.name}}</td>
     </ng-container>
   
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef>Email</th>
-      <td mat-cell *matCellDef="let element">{{element.email}}</td>
+      <td mat-cell *matCellDef="let usuario">{{usuario.email}}</td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
