--- a/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
@@ -54,7 +54,11 @@
 
         <div class="form-group">
             <!-- <input type="file" class="form-control-file" id="exampleFormControlFile1" [formControl]="form.controls['img']"> -->
-            <input type="file" (change)="foto64()" id="fotoInput" />
+            <input type="file" (change)="foto64()" id="fotoInput" [formControl]="form.controls['img']"/>
+        </div>
+        <div class="form-group">
+            <!-- <input type="file" class="form-control-file" id="exampleFormControlFile1" [formControl]="form.controls['img']"> -->
+            <input type="file" (change)="fotos64()" id="fotosInput" multiple/>
         </div>
 
         <div fxLayoutAlign="end end">
