--- a/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/usuario-list/usuario-list.component.html
@@ -1,13 +1,6 @@
 <div fxFlex="100%" fxFlexFill>
   <table mat-table [dataSource]="listaUsuariosRes" class="mat-elevation-z8" fxFlexFill>
   
-    <!-- Position Column -->
-    <ng-container matColumnDef="userId">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let usuario">{{usuario.id}}</td>
-    </ng-container>
-  
-    <!-- Name Column -->
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef>Nombre</th>
       <td mat-cell *matCellDef="let usuario">{{usuario.name}}</td>
@@ -17,8 +10,15 @@
       <th mat-header-cell *matHeaderCellDef>Email</th>
       <td mat-cell *matCellDef="let usuario">{{usuario.email}}</td>
     </ng-container>
+
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef>Acciones</th>
+      <td mat-cell *matCellDef="let usuario">
+        <button mat-raised-button color="primary" (click)="deleteUsuario(usuario)">Eliminar</button>
+      </td>
+    </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  </div>
+</div>
