--- a/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/dialogs/add-project/add-project.component.html
@@ -58,7 +58,7 @@
         </div>
         <div class="form-group">
             <!-- <input type="file" class="form-control-file" id="exampleFormControlFile1" [formControl]="form.controls['img']"> -->
-            <input type="file" (change)="fotos64()" id="fotosInput" multiple/>
+            <input type="file" (change)="fotos64()" id="fotosInput"  [formControl]="form.controls['imagenes']" multiple/>
         </div>
 
         <div fxLayoutAlign="end end">
