--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -2,7 +2,9 @@
   <mat-list fxFlexFill *ngFor="let pregunta of preguntas">
     <h3 mat-subheader>{{pregunta.pregunta}}</h3>
     <mat-list-item>
-      <mat-icon mat-list-icon>folder</mat-icon>
+      <mat-icon mat-list-icon>
+        <i class="mdi mdi-hand-pointing-right"></i></mat-icon>
+      <i class="mdi mdi-chart-pie"></i>
       <h4 mat-line>{{pregunta.respuestaA}}</h4>
       <h4 mat-line>{{pregunta.respuestaB}}</h4>
       <h4 mat-line>{{pregunta.respuestaC}}</h4>
