--- a/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/proyecto-detallado/proyecto-detallado.component.html
@@ -5,25 +5,11 @@
 				<h3 class="card-title">{{proyect.nombre}}</h3>
 				<h6 class="card-subtitle">Imagenes</h6>
 				<ngb-carousel>
-					<ng-template ngbSlide>
-						<img src="assets/images/big/img1.jpg" alt="Random first slide">
+					<ng-template ngbSlide *ngFor="let imagen of listaImagenes">
+						<img src="{{imagen}}" alt="Random first slide">
 						<div class="carousel-caption">
-							<h3 class="text-white font-bold">First slide label</h3>
+							<h3 class="text-white font-bold">Imagenes del proyecto {{proyect.nombre}}</h3>
 							<p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-						</div>
-					</ng-template>
-					<ng-template ngbSlide>
-						<img src="assets/images/big/img2.jpg" alt="Random second slide">
-						<div class="carousel-caption">
-							<h3 class="text-white font-bold">Second slide label</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-						</div>
-					</ng-template>
-					<ng-template ngbSlide>
-						<img src="assets/images/big/img3.jpg" alt="Random third slide">
-						<div class="carousel-caption">
-							<h3 class="text-white font-bold">Third slide label</h3>
-							<p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
 						</div>
 					</ng-template>
         </ngb-carousel>
@@ -46,21 +32,19 @@
     </div>
 </div>
 </div>
-<div class="col-md-11">
+<div *ngFor="let comentario of ultimosComentarios" class="col-md-11">
     <div class="card">
         <div class="card-body">
-            <h3 class="card-title">Usuario</h3>
-            <h6 class="card-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut convallis a lorem nec ullamcorper. Vivamus 
-                id mi purus. Sed tristique leo sit amet risus viverra cursus. Sed nibh odio, finibus a quam non, vestibulum hendrerit ligula. 
-                Aenean vel leo ligula. Morbi vestibulum leo odio. Integer pretium sollicitudin luctus. Mauris mi tellus, facilisis a tempus vel.</h6>
-            <ngb-rating [(rate)]="currentRate">
+            <h3 class="card-title">{{comentario.autor}}</h3>
+            <h6 class="card-subtitle">{{comentario.contenido}}</h6>
+            <ngb-rating [(rate)]="comentario.valoracion">
                 <ng-template let-fill="fill">
                     <span class="star" [class.filled]="fill === 100">&#9733;</span>
                 </ng-template>
             </ngb-rating>
 
             <div class="m-t-10">Valoración:
-                <b>{{currentRate}}</b>
+                <b>{{comentario.valoracion}}</b>
             </div>
         </div>
     </div>
