--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -1,14 +1,15 @@
 <div fxFlex="100%" fxFlexFill>
-  <mat-list fxFlexFill *ngFor="let pregunta of preguntas">
-    <h3 mat-subheader>{{pregunta.pregunta}}</h3>
-    <mat-list-item>
-      <mat-icon mat-list-icon>
-        <i class="mdi mdi-hand-pointing-right"></i></mat-icon>
-      <i class="mdi mdi-chart-pie"></i>
-      <h4 mat-line>{{pregunta.respuestaA}}</h4>
-      <h4 mat-line>{{pregunta.respuestaB}}</h4>
-      <h4 mat-line>{{pregunta.respuestaC}}</h4>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-  </mat-list>
+    <mat-list fxFlexFill *ngFor="let pregunta of preguntas">
+        <h1 mat-subheader>{{pregunta.pregunta}}</h1>
+        <mat-list-item>
+            <mat-icon mat-list-icon>
+                <i class="mdi mdi-hand-pointing-right"></i></mat-icon>
+            <i class="mdi mdi-chart-pie"></i>
+            <h4 mat-line>A - {{pregunta.respuestaA}}</h4>
+            <h4 mat-line>B - {{pregunta.respuestaB}}</h4>
+            <h4 mat-line *ngIf="pregunta.respuestaC!=null">C - {{pregunta.respuestaC}}</h4>
+        </mat-list-item>
+        <mat-divider></mat-divider>
+    </mat-list>
+    <button (click)="openDialogAddPregunta()" type="button" class="btn btn-success btn-circle btn-lg mat-fab-bottom-right" style="z-index: 9;"><i class="fa fa-link"></i> </button>
 </div>
