--- a/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
+++ b/adminpro-angular7-lite/Angular/src/app/component/encuesta/encuesta.component.html
@@ -1,19 +1,23 @@
 <div fxFlex="100%" fxFlexFill>
     <mat-list fxFlexFill *ngFor="let pregunta of preguntas">
         <h1 mat-subheader>{{pregunta.pregunta}}</h1>
-        <mat-list-item>
-            <mat-icon mat-list-icon>
-                <i class="mdi mdi-hand-pointing-right"></i></mat-icon>
-            <i class="mdi mdi-chart-pie"></i>
-            <h4 mat-line>A - {{pregunta.respuestaA}}</h4>
-            <h4 mat-line>B - {{pregunta.respuestaB}}</h4>
-            <h4 mat-line *ngIf="pregunta.respuestaC!=null">C - {{pregunta.respuestaC}}</h4>
-        </mat-list-item>
-        <div class="container" id="grafico">
-            <div class="col-sm-4 text-center">
-                <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+        <mat-card>
+            <mat-list-item>
+                <mat-icon mat-list-icon>
+                    <i class="mdi mdi-hand-pointing-right"></i>
+                </mat-icon>
+                <i class="mdi mdi-chart-pie"></i>
+                <h4 mat-line>A - {{pregunta.respuestaA}}</h4>
+                <h4 mat-line>B - {{pregunta.respuestaB}}</h4>
+                <h4 mat-line *ngIf="pregunta.respuestaC!=null">C - {{pregunta.respuestaC}}</h4>
+            </mat-list-item>
+            <div class="container" id="grafico">
+                <div class="col-sm-4 text-center">
+                    <canvas baseChart [data]="pieChartData" [labels]="pieChartLabels" [chartType]="pieChartType" [options]="pieChartOptions" (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+                </div>
             </div>
-        </div>
+        </mat-card>
+
         <mat-divider></mat-divider>
     </mat-list>
     <button (click)="openDialogAddPregunta()" type="button" class="btn btn-success btn-circle btn-lg mat-fab-bottom-right" style="z-index: 9;"><i class="fa fa-link"></i> </button>
